preparation of sSSR, eSRR and similar

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -23,7 +23,8 @@
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
-%  * filled the demand for some starting overview of the common structures
+%  * filled the demand for some starting overview of the common structures, in a level of detail and
+%    didactic approach that the author was missing in the available literature
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
