--- a/numeric.tex
+++ b/numeric.tex
@@ -718,9 +718,7 @@ Other downsides relate to the practical implementation, and arguably are the rea
 In spite of these limitations, the simplified implementation of CDH for this thesis remains an important complement to the s-parameter method. 
 
 %}}}
-\subsection{Other effective parameter retrieval methods} % TODO
-
-
+\subsection{Other effective parameter retrieval methods}      % complement?
 \paragraph{Extensions of the scattering parameters method} 
 Various modifications to the scattering parameters method were proposed, in particular with connection to the homogenisation of metamaterials. One modification makes it robust against the experimental error in the reflectance phase \cite{chalapat2009wideband}. % Wideband reference-plane invariant method for measuring electromagnetic parameters of materials
 Another solution to the issues connected with experimental measurement of the reflectance was employed during the preparation of this thesis \cite{nemec2012resonant}. It involved a slight modification to the experimental setup, and thus it is described in the experimental chapter (pp. \pageref{srtm}--\pageref{srtm2}).
@@ -740,7 +738,7 @@ the scattering parameter method was extended also to the bianisotropic behaviour
 % LIST: 1) averaging of the fields, 2) 
 
 \paragraph{Averaging of the fields} 
-In contrast with the scattering parameters method, where $\Neff(f)$ and $\Zeff(f)$ were retrieved first using the amplitudes  of the reflectance and transmittance, and the local effective permittivity $\eeff(f)$ and permeability $\meff(f)$ were computed later, using Eqs. (\ref{eq_dispeqN}) and (\ref{eq_Z}). The local values of $\eeff(f)$ and $\meff(f)$  computed by the scattering parameter method are considered valid only when $|\Neff'| \ll 2\pi/a$, i.e., when the unit cell size $a$ is much less than the Bloch wavelength.
+With the scattering parameters method, $\Neff(f)$ and $\Zeff(f)$ are retrieved first using the amplitudes of the reflectance and transmittance.  were computed later. The  local effective permittivity $\eeff(f)$ and permeability $\meff(f)$ can be  computed using  Eqs. (\ref{eq_dispeqN}) and (\ref{eq_Z}), but are considered valid only when $|\Neff'| \ll 2\pi/a$, i.e., when the unit cell size $a$ is much less than the Bloch wavelength.
 
 The effective parameters $\eeff(f)$ and $\meff(f)$ can however be computed directly by exciting a unit cell of the structure, averaging both the fields ($\E$, $\HH$) and the displacements ($\D$ and $\B$), and dividing the respective displacement by the field. The method is described in Ref. \cite{smith2006homogenization}, where also numerical examples are given. 
 
