--- a/t.tex
+++ b/t.tex
@@ -38,18 +38,18 @@
 
  
 \begin{document}
-\input{title.tex}
-\tableofcontents
-
-\chapter{Introduction}
-\input{intro.tex}
-
-\chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- probably K. Lewin
-\input{theory.tex}
-
-\chapter{Numerical methods} 
-% Computers are useless. They can only give you answers. -- P. Picasso (1968)
-\input{numeric.tex}
+% \input{title.tex}
+% \tableofcontents
+% 
+% \chapter{Introduction}
+% \input{intro.tex}
+% 
+% \chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- probably K. Lewin
+% \input{theory.tex}
+% 
+% \chapter{Numerical methods} 
+% % Computers are useless. They can only give you answers. -- P. Picasso (1968)
+% \input{numeric.tex}
 
 \chapter{Experimental methods}
 \input{expe.tex}
@@ -58,7 +58,7 @@
 % The purpose of computing is insight, not numbers. -- R. W. Hamming
 \input{result.tex}
 
-\chapter{Conclusion} %Scientific discovery and scientific knowledge have been achieved only by those who have gone in pursuit of them without any practical purpose whatsoever in view. -- M. Planck
+\chapter{Conclusion}
 \input{conclusion.tex}
 
 \label{endtext} 
